force-app/main/default/objects/Campaign_Volunteer__c/Campaign_Volunteer__c.object-meta.xml
<CustomObject>
    <label>Campaign Volunteer</label>
    <nameField>
        <displayFormat>CV-{0000}</displayFormat>
        <label>Campaign Volunteer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Volunteers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>