force-app/main/default/objects/Campaign_Volunteer__c/fields/Campaign1__c.field-meta.xml
<CustomField>
    <fullName>Campaign1__c</fullName>
    <label>Campaign1</label>
    <referenceTo>Campaign1__c</referenceTo>
    <relationshipLabel>Campaign Volunteers</relationshipLabel>
    <relationshipName>Campaign_Volunteers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>