force-app/main/default/objects/Campaign_Volunteer__c/fields/Hours_Contributed__c.field-meta.xml
<CustomField>
    <fullName>Hours_Contributed__c</fullName>
    <label>Hours Contributed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>