force-app/main/default/objects/Campaign_Volunteer__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <label>Volunteer</label>
    <referenceTo>Volunteer__c</referenceTo>
    <relationshipLabel>Campaign Volunteers</relationshipLabel>
    <relationshipName>Campaign_Volunteers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>